fix: tests LlamaIterator